<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="25dp"
    android:background="@color/black"
    android:orientation="vertical">



        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:src="@drawable/music1"
            android:scaleType="centerInside"

            android:contentDescription="@string/app_name" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            android:layout_marginBottom="25dp"

            >

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:layout_width="wrap_content"

                android:maxHeight="45dp"
                android:backgroundTint="@color/black"
                android:layout_height="60dp"
                android:drawableTop="@drawable/bell_icon"
                android:text="@string/remindMe"
                android:textColor="@color/white"
                android:textSize="12sp"

                android:textAllCaps="false"
                android:layout_gravity="end"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="60dp"

                android:backgroundTint="@color/black"
                android:drawableTop="@drawable/info_icon"
                android:maxHeight="45dp"
                android:text="@string/info"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="12sp" />



        </LinearLayout>
        <TextView

            android:layout_marginVertical="1dp"
            android:id="@+id/release_date_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textColor="@color/white"
            android:text="@string/comingSoon"
            android:textSize="14sp"

            />

        <TextView
            android:layout_marginVertical="3dp"
            android:id="@+id/movie_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/movieName"
            android:textSize="16sp"

            />
        <TextView
            android:layout_marginVertical="1dp"
            android:id="@+id/discription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:textColor="@color/white"
            android:text="@string/movieDescription"
            android:textSize="14sp"
            android:layout_marginBottom="30dp"
            />



</LinearLayout>