<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

     android:id="@+id/bottom_sheet"

    android:orientation="vertical"
    android:layout_marginHorizontal="25dp"
    android:layout_width="match_parent"
        android:layout_height="match_parent">
<!--    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"-->
<!--    app:behaviour_hideable="true"-->
<!--    app:behavior_peekHight="60dp"-->

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginStart="130dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/movieImage1"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/movie_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="3dp"
            android:padding="5dp"
            android:singleLine="true"
            android:text="@string/movieName"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView

                android:id="@+id/release_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:layout_marginStart="4dp"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/comingSoon"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView

                android:id="@+id/movie_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:layout_marginStart="4dp"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/rating"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>


        <TextView
            android:id="@+id/discription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:padding="5dp"
            android:text="@string/movieDescription"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/movieImage1"
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:layout_margin="10dp"
        android:adjustViewBounds="true"
        android:background="@color/black"
        android:scaleType="centerInside"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:shapeAppearanceOverlay="@style/Rounded_corner" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/have_it_main"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_weight="1.5"
            android:backgroundTint="@android:color/transparent"
            android:drawableLeft="@drawable/play_icon_blake"
            android:drawablePadding="30dp"
            android:gravity="left|center_vertical"
            android:maxHeight="50dp"
            android:paddingLeft="60dp"
            android:text="@string/play"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            tools:ignore="RtlHardcoded,RtlSymmetry" />


        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.75"
            android:backgroundTint="@android:color/transparent"
            android:drawableTop="@drawable/downloads_icon_mini"
            android:maxHeight="50dp"
            android:text="@string/downloads"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp" />


        <Button

            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="0.75"
            android:backgroundTint="@android:color/transparent"
            android:drawableTop="@drawable/play_icon_mini"
            android:text="@string/info"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp" />


    </LinearLayout>

    <Button

        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="192dp"
        android:layout_weight="1.5"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/info_icon"
        android:drawablePadding="80dp"
        android:maxHeight="50dp"

        android:singleLine="true"
        android:text="@string/details"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:iconGravity="textStart"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:ignore="RtlSymmetry" />

    <Button

        android:id="@+id/button2"
        android:layout_width="0dp"
        android:background="@color/black"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_weight="1.5"
        android:backgroundTint="@color/white"
        android:drawableRight="@drawable/forward_arow"
        android:maxHeight="40dp"
        android:textColor="@color/black"
        app:iconGravity="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:ignore="RtlSymmetry" />


</androidx.constraintlayout.widget.ConstraintLayout>