<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Ui.FastLaughsFragment">



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fastLaughRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/extendedFloatingActionButton3"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="96dp"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        android:drawableTop="@drawable/play_icon"
        android:focusable="true"
        android:paddingVertical="0dp"
        android:stateListAnimator="@null"
        android:text="@string/play"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:backgroundTint="@android:color/transparent"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toTopOf="@+id/fastLaughRv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/extendedFloatingActionButton"
        app:layout_constraintTop_toBottomOf="@+id/extendedFloatingActionButton"
        app:layout_constraintVertical_bias="0.73"
        app:rippleColor="@color/white" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/extendedFloatingActionButton"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        android:drawableTop="@drawable/share_icon"
        android:focusable="true"
        android:paddingVertical="0dp"
        android:text="@string/share"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:stateListAnimator="@null"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:backgroundTint="@android:color/transparent"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toTopOf="@+id/extendedFloatingActionButton3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/extendedFloatingActionButton2"
        app:layout_constraintTop_toBottomOf="@+id/extendedFloatingActionButton2"
        app:rippleColor="@color/white" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/extendedFloatingActionButton2"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        android:drawableTop="@drawable/add_icon_big"
        android:focusable="true"
        android:paddingVertical="0dp"
        android:text="@string/myPlayList"
        android:textAllCaps="false"
        android:stateListAnimator="@null"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:backgroundTint="@android:color/transparent"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toTopOf="@+id/extendedFloatingActionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/extendedFloatingActionButton4"
        app:layout_constraintTop_toBottomOf="@+id/extendedFloatingActionButton4"
        app:rippleColor="@color/white" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/extendedFloatingActionButton4"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="328dp"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        android:drawableTop="@drawable/smile_icon"
        android:focusable="true"
        android:paddingVertical="0dp"
        android:text="@string/like"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:backgroundTint="@android:color/transparent"
        app:borderWidth="0dp"
        android:stateListAnimator="@null"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toTopOf="@+id/extendedFloatingActionButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fastLaughRv"
        app:rippleColor="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>