<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Ui.DownloadsFragment">

    <LinearLayout
        android:layout_marginVertical="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               >
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/downloads"
                   android:textSize="16sp"
                   android:textColor="@color/white"
                   android:textStyle="bold"
                   android:paddingVertical="8dp"/>

               <Space
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1" />

               <ImageButton
                  android:background="@android:color/transparent"
                   android:layout_width="wrap_content"
                   android:layout_height="match_parent"
                   android:src="@drawable/search_icon"
                   android:contentDescription="@string/share"
                   app:tint="@color/white"
                   android:layout_marginEnd="3dp"/>
               <ImageView
                   android:layout_width="20dp"
                   android:layout_height="20dp"
                   android:layout_marginEnd="4dp"
                   android:layout_gravity="center"
                   android:background="#FF9800"
                   android:contentDescription="@string/share" />


           </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smartDownLoad"
            android:textSize="14sp"
            android:textColor="@color/white"

            android:paddingVertical="8dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="10dp"
            android:id="@+id/downLoadsRv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>